--- a/style.css
+++ b/style.css
@@ -17,15 +17,15 @@ p {
 .wa {
     width: 100%;
     height: 100%;
-    margin: 1rem;
+/*     margin: 1rem; */
     object-fit: cover;
-    padding: 2rem;
+/*     padding: 2rem; */
 }
 
 .wak {
     width: 100%;
     height: 30rem;
-    margin: 1rem;
+/*     margin: 1rem; */
     object-fit: cover;
-    padding: 2rem;
+/*     padding: 2rem; */
 }
