--- a/style.css
+++ b/style.css
@@ -17,15 +17,15 @@ p {
 .wa {
     width: 100%;
     height: 100%;
-/*     margin: 1rem; */
-    object-fit: cover;
-/*     padding: 2rem; */
+    margin: 1rem 0;
+    /* object-fit: cover; */
+    padding: 2rem 0;
 }
 
 .wak {
     width: 100%;
-    height: 30rem;
-/*     margin: 1rem; */
-    object-fit: cover;
-/*     padding: 2rem; */
+    height: 20rem;
+    margin: 1rem 0;
+    /* object-fit: cover; */
+    padding: 2rem 0;
 }
